--- a/source-css/applefritter.css
+++ b/source-css/applefritter.css
@@ -222,8 +222,7 @@ a[href|="/sp"] {
 
 /*** Arrows ***/
 
-.arrow.down { visibility: hidden; display: none; }
-.comment .arrow.down { visibility: visible; display: block; }
+.link .arrow.down { visibility: hidden; display: none; }
 
 .arrow.upmod {
     background-image: url(%%fritarrows%%);
