--- a/source-css/ponymotes.css
+++ b/source-css/ponymotes.css
@@ -423,8 +423,12 @@ a[href|="/flutterbatscowl"], a[href|="/ppduckface"], a[href|="/duckfaceselfie"],
 {background-image:url(%%150x150b%%);width:150px;height:150px;display:block;float:left;}
 
 /* 150x150c 'motes */
-a[href|="/imnotsayingitwaschaos"], a[href|="/uwotdahling"], a[href|="/proletariat"], a[href|="/pinkiefly"], a[href|="/greatandpowerfuldinky"], a[href|="/redheart"], a[href|="/cybermedic"], a[href|="/notenoughtwi"], a[href|="/twiburger"], a[href|="/princessdiscord"], a[href|="/thisisbait"], a[href|="/derpydress"], a[href|="/nothisisbait"], a[href|="/everythingisbait"], a[href|="/crazylestia"], a[href|="/twilikethis"], a[href|="/celcrazy"]
+a[href|="/imnotsayingitwaschaos"], a[href|="/uwotdahling"], a[href|="/proletariat"], a[href|="/pinkiefly"], a[href|="/greatandpowerfuldinky"], a[href|="/redheart"], a[href|="/cybermedic"], a[href|="/notenoughtwi"], a[href|="/twiburger"], a[href|="/princessdiscord"], a[href|="/thisisbait"], a[href|="/derpydress"], a[href|="/nothisisbait"], a[href|="/everythingisbait"], a[href|="/crazylestia"], a[href|="/twilikethis"], a[href|="/celcrazy"], a[href|="/scootabloom"], a[href|="/abra"], a[href|="/charizard"], a[href|="/zubat"], a[href|="/wartortle"]
 {background-image:url(%%150x150c%%);width:150px;height:150px;display:block;float:left;}
+
+/* 150x150d 'motes */
+a[href|="/poliwag"], a[href|="/venonat"], a[href|="/pikachu"], a[href|="/ghastly"], a[href|="/ninetales"], a[href|="/venasaur"]
+{background-image:url(%%150x150d%%);width:150px;height:150px;display:block;float:left;}
 
 /* 200x200a 'motes. */
 a[href|="/regret"], a[href|="/pinkiemail"], a[href|="/obsessivetrixie"], a[href|="/trixiebeingcreepy"], a[href|="/nightmaresparkle"], a[href|="/magnemites"], a[href|="/princessfluttershy"], a[href|="/pinkpyro"], a[href|="/happynewyear"], a[href|="/hnng"], a[href|="/woonabounce"], a[href|="/lunanurse"], a[href|="/50sderpy"]
@@ -468,31 +472,35 @@ a[href|="/sleepyrarijack"], a[href|="/disapproveowl"], a[href|="/smugspike"], a[
 {background-image:url(%%misfitsf%%);display:block;float:left;}
 
 /* Misfits g */
-a[href|="/kawaiidash"], a[href|="/cadmad"], a[href|="/cadbrow"], a[href|="/spitfirespitfire"], a[href|="/rdcheesehead"], a[href|="/notenoughapples"], a[href|="/notenoughdash"], a[href|="/notenoughrainbows"], a[href|="/twipjs"], a[href|="/twistunned"], a[href|="/twicanteven"]
+a[href|="/kawaiidash"], a[href|="/cadmad"], a[href|="/cadbrow"], a[href|="/spitfirespitfire"], a[href|="/rdcheesehead"], a[href|="/notenoughapples"], a[href|="/notenoughdash"], a[href|="/notenoughrainbows"], a[href|="/twipjs"], a[href|="/twistunned"], a[href|="/twicanteven"], a[href|="/twicanthearyou"], a[href|="/twilybutt"], a[href|="/ladybugsawake"], a[href|="/twiwantrevenge"], a[href|="/mybooks"], a[href|="/kawaiitwi"], a[href|="/bookfire"], a[href|="/cubone"], a[href|="/horsea"], a[href|="/gengar"], a[href|="/muk"], a[href|="/haunter"], a[href|="/tangela"], a[href|="/sandslash"], a[href|="/tentacruel"], a[href|="/charmeleon"], a[href|="/arbok"]
 {background-image:url(%%misfitsg%%);display:block;float:left;}
 
+/* Misfits h */
+a[href|="/slowbro"], a[href|="/oddish"], a[href|="/mankey"]
+{background-image:url(%%misfitsh%%);display:block;float:left;}
+
 /* Grid pos 0,0 'motes. Not needed but for completeness... */
-a[href|="/cadface"], a[href|="/pinkieplease"], a[href|="/regret"], a[href|="/apathiasquint"], a[href|="/tuxpony"], a[href|="/karmashark"], a[href|="/jumptheshark"], a[href|="/flutterbatscowl"], a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/imnotsayingitwaschaos"], a[href|="/rariluna"]
+a[href|="/cadface"], a[href|="/pinkieplease"], a[href|="/regret"], a[href|="/apathiasquint"], a[href|="/tuxpony"], a[href|="/karmashark"], a[href|="/jumptheshark"], a[href|="/flutterbatscowl"], a[href|="/rarityparanoid"], a[href|="/rarinoid"], a[href|="/imnotsayingitwaschaos"], a[href|="/rariluna"], a[href|="/poliwag"]
 {background-position: 0 0;}
 
 /* Grid pos 1,0 'motes */
-a[href|="/twispike"], a[href|="/pinkiemail"], a[href|="/chibiluna"], a[href|="/apathiablankstare"], a[href|="/rdohyeah"], a[href|="/ppduckface"], a[href|="/duckfaceselfie"], a[href|="/flutterfreaked"], a[href|="/uwotdahling"], a[href|="/superalicorn"], a[href|="/season4"]
+a[href|="/twispike"], a[href|="/pinkiemail"], a[href|="/chibiluna"], a[href|="/apathiablankstare"], a[href|="/rdohyeah"], a[href|="/ppduckface"], a[href|="/duckfaceselfie"], a[href|="/flutterfreaked"], a[href|="/uwotdahling"], a[href|="/superalicorn"], a[href|="/season4"], a[href|="/venonat"]
 {background-position: -100% 0%;}
 
 /* Grid pos 2,0 'motes */
-a[href|="/shiningcadancehug"], a[href|="/obsessivetrixie"], a[href|="/trixiebeingcreepy"], a[href|="/twicider"], a[href|="/rainbowstache"], a[href|="/sparklelove"], a[href|="/libwawy"], a[href|="/ohgoditstoocute"], a[href|="/applewat"], a[href|="/proletariat"]
+a[href|="/shiningcadancehug"], a[href|="/obsessivetrixie"], a[href|="/trixiebeingcreepy"], a[href|="/twicider"], a[href|="/rainbowstache"], a[href|="/sparklelove"], a[href|="/libwawy"], a[href|="/ohgoditstoocute"], a[href|="/applewat"], a[href|="/proletariat"], a[href|="/pikachu"]
 {background-position: -200% 0%;}
 
 /* Grid pos 0,1 'motes */
-a[href|="/twihappycry"], a[href|="/nightmaresparkle"], a[href|="/nomakeup"], a[href|="/lemonglee"], a[href|="/derpyshrug"], a[href|="/fspuppyeyes"], a[href|="/fspout"], a[href|="/pinkiefly"]
+a[href|="/twihappycry"], a[href|="/nightmaresparkle"], a[href|="/nomakeup"], a[href|="/lemonglee"], a[href|="/derpyshrug"], a[href|="/fspuppyeyes"], a[href|="/fspout"], a[href|="/pinkiefly"], a[href|="/ghastly"]
 {background-position: 0 -100%;}
 
 /* Grid pos 1,1 'motes */
-a[href|="/properbudget"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href|="/grannyglad"], a[href|="/magnemites"], a[href|="/gravestone"], a[href|="/theydied"], a[href|="/scootasquee"], a[href|="/greatandpowerfuldinky"]
+a[href|="/properbudget"], a[href|="/twiscepter"], a[href|="/twisceptre"], a[href|="/grannyglad"], a[href|="/magnemites"], a[href|="/gravestone"], a[href|="/theydied"], a[href|="/scootasquee"], a[href|="/greatandpowerfuldinky"], a[href|="/ninetales"]
 {background-position: -100% -100%;}
 
 /* Grid pos 2,1 'motes */
-a[href|="/celestiaglee"], a[href|="/winona"], a[href|="/aloe"], a[href|="/princessfluttershy"], a[href|="/rarihick"], a[href|="/fillycoco"], a[href|="/redheart"]
+a[href|="/celestiaglee"], a[href|="/winona"], a[href|="/aloe"], a[href|="/princessfluttershy"], a[href|="/rarihick"], a[href|="/fillycoco"], a[href|="/redheart"], a[href|="/venasaur"]
 {background-position: -200% -100%;}
 
 /* Grid pos 0,2 'motes */
@@ -506,7 +514,6 @@ a[href|="/twiimbetterthanyou"], a[href|="/twimbetterthanyou"], a[href|="/neutral
 /* Grid pos 2,2 'motes */
 a[href|="/bonboudicca"], a[href|="/celticbonbon"], a[href|="/fluttereyebrow"], a[href|="/fillyfirefly"], a[href|="/woonabounce"], a[href|="/nerdscratch"], a[href|="/rdtsundere"], a[href|="/twiburger"]
 {background-position: -200% -200%;}
-
 
 /* Grid pos 0,3 'motes */
 a[href|="/whatatwist"],  a[href|="/hnng"], a[href|="/smugcolgate"], a[href|="/rdwat"], a[href|="/nerddash"], a[href|="/fsfascinating"], a[href|="/princessdiscord"]
@@ -542,23 +549,23 @@ a[href|="/tiadisapproval"], a[href|="/ppdoubt"], a[href|="/nerdpie"], a[href|="/
 {background-position: -100% -500%;}
 
 /* Grid pos 2,5 'motes */
-a[href|="/raridoubt"], a[href|="/nerdtwi"], a[href|="/dashsquint"], a[href|="/seapeeve"]
+a[href|="/raridoubt"], a[href|="/nerdtwi"], a[href|="/dashsquint"], a[href|="/seapeeve"], a[href|="/scootabloom"]
 {background-position: -200% -500%;}
 
 /* Grid pos 0,6 'motes */
-a[href|="/flutterdoubt"], a[href|="/nerdlyra"], a[href|="/rastare"], a[href|="/loveletter"]
+a[href|="/flutterdoubt"], a[href|="/nerdlyra"], a[href|="/rastare"], a[href|="/loveletter"], a[href|="/abra"]
 {background-position: 0 -600%;}
 
 /* Grid pos 1,6 'motes */
-a[href|="/dashdoubt"], a[href|="/humannerddash"], a[href|="/scootcontent"], a[href|="/twilightglare"]
+a[href|="/dashdoubt"], a[href|="/humannerddash"], a[href|="/scootcontent"], a[href|="/twilightglare"], a[href|="/charizard"]
 {background-position: -100% -600%;}
 
 /* Grid pos 2,6 'motes */
-a[href|="/deviousmac"], a[href|="/nerdsunset"], a[href|="/rdfacehoof"], a[href|="/rdtwifacehoof"], a[href|="/tirekunamused"]
+a[href|="/deviousmac"], a[href|="/nerdsunset"], a[href|="/rdfacehoof"], a[href|="/rdtwifacehoof"], a[href|="/tirekunamused"], a[href|="/zubat"]
 {background-position: -200% -600%;}
 
 /* Grid pos 0,7 'motes */
-a[href|="/zerofucks"], a[href|="/greaserspike"], a[href|="/rdtwipride"], a[href|="/rarityunamused"]
+a[href|="/zerofucks"], a[href|="/greaserspike"], a[href|="/rdtwipride"], a[href|="/rarityunamused"], a[href|="/wartortle"]
 {background-position: 0 -700%;}
 
 /* Grid pos 1,7 'motes */
@@ -884,3 +891,22 @@ a[href|="/notenoughapples"] {width:123px;height:150px;background-position: -376p
 a[href|="/notenoughdash"], a[href|="/notenoughrainbows"] {width:121px;height:150px;background-position: -499px 0;}
 a[href|="/twipjs"] {width:200px;height:136px;background-position: -126px -150px;}
 a[href|="/twistunned"], a[href|="/twicanteven"] {width:200px;height:122px;background-position: -126px -286px;}
+a[href|="/twicanthearyou"] {width:200px;height:143px;background-position: -326px -150px;}
+a[href|="/twilybutt"], a[href|="/ladybugsawake"] {width:91px;height:110px;background-position: 0 -350px;}
+a[href|="/ladybugsawake"] {margin-top: 10px;}
+a[href|="/twiwantrevenge"], a[href|="/mybooks"] {width:200px;height:122px;background-position: -326px -293px;}
+a[href|="/kawaiitwi"] {width:83px;height:150px;background-position: 0 -460px;}
+a[href|="/bookfire"] {width:100px;height:81px;background-position: 0 -619px;}
+a[href|="/cubone"] {width:125px;height:150px;background-position: -91px -408px;}
+a[href|="/horsea"] {width:114px;height:150px;background-position: -216px -408px;}
+a[href|="/gengar"] {width:150px;height:113px;background-position: -526px -150px;}
+a[href|="/muk"] {width:119px;height:150px;background-position: -330px -415px;}
+a[href|="/haunter"] {width:89px;height:150px;background-position: -449px -415px;}
+a[href|="/tangela"] {width:150px;height:124px;background-position: -100px -558px;}
+a[href|="/sandslash"] {width:113px;height:150px;background-position: -538px -415px;}
+a[href|="/tentacruel"] {width:150px;height:112px;background-position: -250px -565px;}
+a[href|="/charmeleon"] {width:122px;height:150px;background-position: -526px -265px;}
+a[href|="/arbok"] {width:98px;height:150px;background-position: -648px -265px;}
+a[href|="/slowbro"] {width:121px;height:150px;}
+a[href|="/oddish"] {width:114px;height:150px;background-position: -121px 0;}
+a[href|="/mankey"] {width:107px;height:150px;background-position: -235px 0;}
