--- a/source-css/roseluck.css
+++ b/source-css/roseluck.css
@@ -74,7 +74,7 @@ height: 70px;
 background-image: url(%%emotes1%%) !important
 }
 
-a[href|="/tuckels"] {
+a[href|="/tuckels"], a[href|="/bananaluck"] {
 display: block;
 clear: none;
 float: left;
